# cart-pole-mpc

./: .gitattributes  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CMakeLists.txt  README.md  generate.py
.github/workflows/: linux.yml
dependencies/: CMakeLists.txt
model/: scratch.py  something.py  test_dynamics.py  train.py
optimization/: CMakeLists.txt  double_pendulum_dynamics.hpp  integration.hpp  integration_test.cc  key.hpp  optimization.cc  optimization.hpp  optimization_test.cc  simulator.cc  simulator.hpp  single_pendulum_dynamics.hpp  single_pendulum_energy.hpp  structs.hpp  wasm.cc
pypendulum/: CMakeLists.txt
pypendulum/dependencies/: CMakeLists.txt
pypendulum/dependencies/wrenfold-runtime/: .clang-format-ignore
pypendulum/source/: dynamics.hpp  parameters.hpp  wrapper.cc
site/: .eslintrc  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.js
site/src/: dynamics.ts  index.ts  pendulum_params.ts  renderer.ts  simulator.ts
symbolic/: dynamics.py  dynamics_double.py  dynamics_single.py  generate.py  sympy_utils.py  ts_generator.py
viz/: .prettierignore  package-lock.json  package.json  plotting.py  server.py  tailwind.config.js  tsconfig.json  webpack.config.js
viz/src/: .gitignore  application.ts  index.ejs  index.html  index.ts  input.ts  interfaces.ts  main.html  plotter.ts  renderer.ts  styles.css  tic_toc.ts  ui.js  utils.ts
wrapper/: CMakeLists.txt  README.md  wrapper.cc
wrapper/dependencies/: CMakeLists.txt
wrapper/source/: assertions.hpp  dynamics_double.hpp  dynamics_single.hpp  integration.hpp  integration_test.cc  wrapper.cc
